# cmipld

./: .gitignore  README.md  TODO.md  basicsEsgvoc.ipynb  pyproject.toml
src/cmipld/: __init__.py  core.py  cv.py  data.py  db.py  project_ingestion.py  settings.py  univers.py  univers_ingestion.py  utils.py
src/cmipld/api/: __init__.py  _utils.py  models.py  projects.py  report.py  search.py  univers.py  universe.py
src/cmipld/api/data_descriptors/: __init__.py
src/cmipld/apps/drs/: __init__.py  models.py
src/cmipld/cli/: config.py  get.py  main.py  status.py
src/cmipld/core/: data_fetcher.py  data_handler.py  logging_handler.py  repo_fetcher.py
src/cmipld/core/db/: __init__.py  _utils.py  project_ingestion.py  universe_ingestion.py
src/cmipld/core/service/: __init__.py  data_merger.py  esgvoc.py  settings.py  settings.toml  settings_default.toml  state.py  version_check_service.py
src/cmipld/db/: __init__.py  project_ingestion.py  univers_ingestion.py  universe_ingestion.py
src/cmipld/errors/: ingestion.py
src/cmipld/fixtures/: project_ingestion.py  univers_ingestion.py
src/cmipld/models/: __init__.py
src/cmipld/utils/: functions.py  naming.py  settings.py
src/esgvoc/api/: _utils.py  projects.py  universe.py
src/esgvoc/cli/: main.py  status.py
src/esgvoc/core/: logging_handler.py  repo_fetcher.py
tests/: test_api_project.py  test_api_univers.py  test_api_universe.py  test_cv.py  test_data.py  test_data_fetcher.py  test_data_handler.py  test_data_merger.py  test_ingestion.py  test_repo_fetcher.py  test_state.py  test_univers.py
(+28 files in other folders)
